@@ -199,7 +199,7 @@ protected:
 	static const DWORD m_dwVer7zRecommended;
 	static const TCHAR m_strRegistryKey[];
 	static const TCHAR m_strDownloadURL[];
-	static BOOL CALLBACK DlgProc(HWND, UINT, WPARAM, LPARAM);
+	static INT_PTR CALLBACK DlgProc(HWND, UINT, WPARAM, LPARAM);
 	static DWORD FormatVersion(LPTSTR, LPTSTR, DWORD);
 };
 
@@ -363,7 +363,7 @@ HCURSOR NTAPI CommCtrl_LoadCursor(LPCTSTR lpCursorName)
 /**
  * @brief DLGPROC for C7ZipMismatchException's ReportError() popup.
  */
-BOOL CALLBACK C7ZipMismatchException::DlgProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
+INT_PTR CALLBACK C7ZipMismatchException::DlgProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
 	switch (uMsg)
 	{
@@ -522,7 +522,7 @@ BOOL CALLBACK C7ZipMismatchException::DlgProc(HWND hWnd, UINT uMsg, WPARAM wPara
  */
 int C7ZipMismatchException::ReportError(UINT nType, UINT nMessageID)
 {
-	short response = -1;
+	UINT_PTR response = -1;
 	m_bShowAllways = nMessageID;
 	if (!m_bShowAllways)
 	{
@@ -658,7 +658,7 @@ DWORD NTAPI VersionOf7z(BOOL bLocal)
 /**
  * @brief Callback to pass to EnumResourceLanguages.
  */
-BOOL CALLBACK FindNextResLang(HMODULE hModule, LPCTSTR lpType, LPCTSTR lpName, WORD wLanguage, LONG lParam)
+BOOL CALLBACK FindNextResLang(HANDLE hModule, LPCTSTR lpType, LPCTSTR lpName,  WORD wLanguage,  LONG_PTR lParam)
 {
 	LPWORD pwLanguage = (LPWORD)lParam;
 	WORD wPrevious = *pwLanguage;
@@ -736,7 +736,7 @@ interface Merge7z *Merge7z::Proxy::operator->()
 		if (HINSTANCE hinstLang = AfxGetResourceHandle())
 		{
 			WORD wLangID = 0;
-			if (EnumResourceLanguages(hinstLang, RT_VERSION, MAKEINTRESOURCE(VS_VERSION_INFO), FindNextResLang, (LPARAM)&wLangID) == 0)
+			if (EnumResourceLanguages(hinstLang, RT_VERSION, MAKEINTRESOURCE(VS_VERSION_INFO), (ENUMRESLANGPROC)FindNextResLang, (LPARAM)&wLangID) == 0)
 			{
 				flags |= wLangID << 16;
 			}
